# randovania-scm-version-schema

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/randovania_scm_version_schema/: __init__.py
tests/: test_schema.py
